# cmdpal-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  update_winmd.rs
cmdpal-packaging/: Cargo.toml  README.md
cmdpal-packaging/src/: lib.rs
src/: bindings.rs  cmd_item.rs  cmd_provider.rs  cmd_result.rs  ctx_item.rs  details.rs  ext.rs  ext_factory.rs  ext_registry.rs  fallback.rs  filter.rs  host.rs  item.rs  lib.rs  main.rs  notify.rs  prelude.rs  settings.rs  utils.rs
src/_cookbook/: mod.rs
src/bindings_docs/: Color.md  CommandResultKind.md  ICommand.md  ICommandContextItem.md  ICommandItem.md  ICommandProvider.md  ICommandResult.md  ICommandResultArgs.md  ICommandSettings.md  IConfirmationArgs.md  IContent.md  IContentPage.md  IContextItem.md  IDetails.md  IDetailsCommand.md  IDetailsData.md  IDetailsElement.md  IDetailsLink.md  IDetailsSeparator.md  IDetailsTags.md  IDynamicListPage.md  IExtension.md  IExtensionHost.md  IFallbackCommandItem.md  IFallbackHandler.md  IFilter.md  IFilterItem.md  IFilters.md  IFormContent.md  IGoToPageArgs.md  IGridProperties.md  IIconData.md  IIconInfo.md  IInvokableCommand.md  IItemsChangedEventArgs.md  IListItem.md  IListPage.md  ILogMessage.md  IMarkdownContent.md  INotifyItemsChanged.md  (+16 more)
src/bindings_docs/Color/: A.md  B.md  G.md  R.md
src/bindings_docs/CommandResultKind/: Confirm.md  Dismiss.md  GoBack.md  GoHome.md  GoToPage.md  Hide.md  KeepOpen.md  ShowToast.md
src/bindings_docs/ICommandContextItem/: Icon.md  IsCritical.md  RequestedShortcut.md
src/bindings_docs/ICommandItem/: MoreCommands.md
src/bindings_docs/ICommandProvider/: DisplayName.md  FallbackCommands.md  Frozen.md  GetCommand.md  Icon.md  Id.md  InitializeWithHost.md  Settings.md  TopLevelCommands.md
src/bindings_docs/ICommandResult/: Args.md  Kind.md
src/bindings_docs/ICommandSettings/: SettingsPage.md
src/bindings_docs/IConfirmationArgs/: Description.md  IsPrimaryCommandCritical.md  PrimaryCommand.md  Title.md
src/bindings_docs/IContentPage/: AccentColor.md  Commands.md  Details.md  GetContent.md  Icon.md  Id.md  IsLoading.md  Name.md
src/bindings_docs/IDetails/: Body.md  HeroImage.md  Metadata.md  Title.md
src/bindings_docs/IDetailsCommand/: Command.md
src/bindings_docs/IDetailsElement/: Data.md  Key.md
src/bindings_docs/IDetailsLink/: Link.md  Text.md
src/bindings_docs/IDetailsTags/: Tags.md
src/bindings_docs/IDynamicListPage/: Filters.md  LoadMore.md  PlaceholderText.md  SetSearchText.md  ShowDetails.md
src/bindings_docs/IExtension/: Dispose.md  GetProvider.md
src/bindings_docs/IExtensionHost/: HideStatus.md  LogMessage.md  ShowStatus.md
src/bindings_docs/IFallbackCommandItem/: DisplayTitle.md  FallbackHandler.md  Subtitle.md  Title.md
src/bindings_docs/IFallbackHandler/: UpdateQuery.md
src/bindings_docs/IFilter/: Icon.md  Id.md  Name.md
src/bindings_docs/IFilters/: CurrentFilterId.md  Filters.md  SetCurrentFilterId.md
src/bindings_docs/IFormContent/: DataJson.md  StateJson.md  SubmitForm.md  TemplateJson.md
src/bindings_docs/IGoToPageArgs/: PageId.md  (+1 more)
src/cmd/: mod.rs
src/content/: form.rs  markdown.rs  mod.rs  tree.rs
src/icon/: data.rs  info.rs  mod.rs
src/page/: content.rs  dyn_list.rs  list.rs  mod.rs
src/provider/: cmd.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs  template.json
winmd/: Microsoft.CommandPalette.Extensions.idl  Microsoft.CommandPalette.Extensions.winmd
(+56 files in other folders)
