[package]
name = "cmdpal"
version = "0.2.0"
edition = "2024"
authors = ["Nyuan Zhang <blueglassblock@outlook.com>"]
license = "MIT OR Apache-2.0"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["powertoys", "command-palette"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "icon.svg",
]
description = "Rust SDK for PowerToys Command Palette"
repository = "https://github.com/BlueGlassBlock/cmdpal-rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
features = ["unstable-doc"]
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ambassador = "0.4"
schemars = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
windows = { version = "0.61", features = [
    "Storage_Streams",
    "System",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
windows-future = "0.2"

[features]
unstable-doc = []

[workspace]
members = ["cmdpal-packaging", "systest"]
