[package]
name = "cmdpal-packaging"
version = "0.2.0"
edition = "2024"
description = "Buld-time packaging helpers for cmdpal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlueGlassBlock/cmdpal-rs"
authors = ["Nyuan Zhang <blueglassblock@outlook.com>"]
keywords = ["powertoys", "command-palette", "build-utils"]
categories = ["development-tools::build-utils"]

[dependencies]
