[package]
name = "cmdpal-systest"
version = "0.1.0"
edition = "2024"
authors = ["Nyuan Zhang <blueglassblock@outlook.com>"]
license = "MIT OR Apache-2.0"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["powertoys", "command-palette"]
exclude = [".github"]
repository = "https://github.com/BlueGlassBlock/cmdpal-rs"

[dependencies]
ambassador = "0.4.1"
macro_rules_attribute = "0.2.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
windows = { version = "0.61.1", features = [
    "Storage_Streams",
    "System",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.0"
windows-future = "0.2.0"
cmdpal = { path = ".." }

[build-dependencies]
cmdpal-packaging = { path = "../cmdpal-packaging" }